# gxmlviewer

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  gxmlviewer.glade  gxmlviewer.spec  gxmlviewer.spec.in  meson.build  org.gnome.XmlViewer.json
Windows/: gxmlviewer.dsp  gxmlviewer.dsw
data/: meson.build  org.gnome.XmlViewer.appdata.xml.in  org.gnome.XmlViewer.desktop.in  org.gnome.XmlViewer.gschema.xml
macros/: Makefile.in
po/: ChangeLog  cat-id-tbl.c  gxmlviewer.pot
samples/: edi840-sample.xml  sample.xml
src/: GNOME_XMLView.oaf.in  Makefile.am  Makefile.in  TODO  callbacks.c  callbacks.h  constants.h  gxmlviewer-window.ui  gxmlviewer.gresource.xml  gxmlviewer.h  interface.c  interface.h  main.c  meson.build  support.c  support.h  xmlparser.c  xmlparser.h  xmlview-control.c  xmlview-control.h  xmlwindow.c  xmlwindow.h
src/extras/: Makefile.am  Makefile.in  README.xmlformatter  xmlformatter.c
src/nsplugin/: Makefile.am  Makefile.in  UnixShell.c  stubs.c
src/nsplugin/common/: Makefile.am  Makefile.in
