dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gxmlviewer, 1.0)
AM_CONFIG_HEADER(config.h)

dnl Pick up the Gnome macros.
AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GNU_GETTEXT

dnl ******************************
dnl libxml checking 
dnl ******************************
AC_MSG_CHECKING(for libxml  >= 1.8.10)
if gnome-config --libs xml > /dev/null 2>&1; then
    vers=`gnome-config --modversion xml | sed -e "s/xml-//" -e 's/cvs$//' -e 's/pre$//' | \
        awk 'BEGIN { FS = "."; } { print $3;}'`
    if test "$vers" -ge 10; then
        AC_MSG_RESULT([found ("$vers")])
	XML_CFLAGS="`gnome-config --cflags xml`"
	XML_LIBS="`gnome-config --libs xml`"
	AC_SUBST(XML_CFLAGS)
	AC_SUBST(XML_LIBS)
    else
  AC_MSG_RESULT([found ("$vers")])
        AC_MSG_ERROR(You need at least libxml 1.8.10 for this version of the GNOME XML Viewer)
    fi
else
    AC_MSG_ERROR(Did not find libxml installed)
fi

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

AC_OUTPUT([
Makefile
macros/Makefile
src/Makefile
src/nsplugin/Makefile
intl/Makefile
po/Makefile.in
])

